<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dividera">/</string>
    <string name="subbtrahera">-</string>
    <string name="addera">+</string>
    <string name="multiplicera">*</string>
    <string name="clear">C</string>
    <string name="iLikaMed">=</string>
    <string name="view_result"></string>
    <string name="view_calculation"></string>
    <string name="conventional">+/-</string>
    <string name="dot">.</string>
    <string name="InfinityText">You can\'t divide by 0!</string>
    <string name="backspace"><![CDATA[<=]]></string>
</resources>
